layout issues -- containers and margins overall

--- a/_preprocess/sass/core/_layout.scss
+++ b/_preprocess/sass/core/_layout.scss
@@ -21,9 +21,9 @@ html, body {
   width: calc(100% - $header-w);
   padding: 0 $main-margin;
 
-  & > h1, & > h2, & > h3, & > h4, & > h5, & > h6, & > hgroup, & > p, & > ul {
-    @extend %add-gutters;
-  }
+  // & > h1, & > h2, & > h3, & > h4, & > h5, & > h6, & > hgroup, & > p, & > ul {
+  //   @extend .wrapper;
+  // }
 
   & > h1 {
     @include rem(margin-top, 24px);
@@ -37,7 +37,7 @@ html, body {
   overflow: hidden;
   clear: both;
   
-  & > h1, & > h2, & > h3, & > h4, & > h5, & > h6, & > hgroup, & > p, & > ul, & > section {
+  & > h1, & > h2, & > h3, & > h4, & > h5, & > h6, & > hgroup, & > p, & > ul {
     @extend %add-gutters;
   }
   
